# openFrameworks-Clion-Windows

./: CMakeLists.txt  README.md  includelist.cmake
_copy to of/libs/openFrameworks/graphics/: ofCairoRenderer.h
